- fixed bug: bug met when restorating of a file that has the immutable
  flag set. Dar/libdar failed restoring such file in the context of
  differential/incremental backup. The fix consists of the removal of the
  immutable flag from filesystem before restoring the new version of the
  file's data, then setting back the immutable flag afterward.

from 2.5.8 to 2.5.9
- fixed typos in documentation about dar internal use of symmetric
  encryption
- fixed bug: merging operation could wrongly melt different unrelated hard
  linked inodes when merging using an archive which results from a previous
  merging operation.
- fixed bug: aborting an archive was sometimes leading to an unreadable
  archive in direct mode (was readable only in --sequential-read mode)
- fixed bug: libgpgme was only present at linking time of final binaries
  (dar, dar_slave, dar_xform, dar_manager, dar_cp, dar_split), not at
  linking time of libdar, which caused problem under Linux Rosa distro
  where the "no-undefined" flag is passed to the linker.
- minor new feature: -ay option has been added to display sizes in bytes
  instead of the default which uses the largest possible unit (Kio, Mio,
  and so on.)

from 2.5.7 to 2.5.8
- fixed double memory release occurring in a particular case of read error
- improving robustness of FSA code against data corruption
- fixed bug: DAR_DUC_PATH was not used with -F and -~ options
- new feature: added -aduc option to combine several -E options using the
  shell '&&' operator rather than the shell ';' operator. The consequence
  is that with -aduc option a non zero exist status of any script (and not
  only of the script given to the last -E option) will lead dar to report
  the error.
- man page updated about combination of several -E options
- fixed bug: merging partial FSA led to self reported bug in cat_inode.cpp
  at line 615

from 2.5.6 to 2.5.7
- fixed bug leading dar to not include directories given to -g option nor